[gd_scene load_steps=4 format=3 uid="uid://bor5ygh7spsil"]

[ext_resource type="Script" path="res://Prefabs/WoodenSlideX/wooden_slideX.gd" id="1_yndyb"]
[ext_resource type="Texture2D" uid="uid://c4qd2e70gpcq3" path="res://Prefabs/WoodenSlideX/Assets/finalBoxVariation-removebg-preview.png" id="3_ejcw0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4y23r"]

[node name="WoodenSlideX" type="CharacterBody2D"]
script = ExtResource("1_yndyb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(19, 19)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_4y23r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(19, 19)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_4y23r")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_ejcw0")
region_rect = Rect2(178.5, 131.5, 213, 209.26)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
